extract benchmarks module